SERVER-39424 Test that a DDL op started after a prepared transaction fails during shutdown